<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/blue"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesHeader"
                android:paddingBottom="@dimen/xsmall"
                android:text="@string/distance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesBody"
                android:paddingBottom="@dimen/small"
                android:text="@string/distance_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesHeader"
                android:paddingBottom="@dimen/xsmall"
                android:text="@string/scoring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesBody"
                android:paddingBottom="@dimen/small"
                android:text="@string/scoring_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesHeader"
                android:paddingBottom="@dimen/xsmall"
                android:text="@string/rules" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesBody"
                android:paddingBottom="@dimen/small"
                android:text="@string/rules_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesHeader"
                android:paddingBottom="@dimen/xsmall"
                android:text="@string/winner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RulesBody"
                android:paddingBottom="@dimen/small"
                android:text="@string/winner_body" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>